--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,6 +9,7 @@ jobs:
   android:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Get additional dependencies
         run: |
           sudo apt-get update -y
